# csv_checker

./: .gitignore  LICENSE  README.md  pyproject.toml
src/csv_checker/: cli.py
src/csv_checker/adapters/: json_serializer.py  reader.py
src/csv_checker/core/: orchestrator.py  profiler.py
src/csv_checker/models/: __init__.py  csv_metrics.py
tests/: conftest.py  test_cli.py  test_orchestrator.py  test_profiler.py  test_serializer.py
