[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "csv_checker"
version = "0.1.0"
description = "A csv information gathering cli tool"
authors = [{name = "Karson Bryant"}]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "typer[all]>=0.12",
    "rich>=13.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[project.scripts]
csv_checker = "csv_checker.cli:main"